--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -2,7 +2,7 @@ FROM opengisch/qgis-server:3.28-jammy
 
 WORKDIR /app
 RUN apt-get install -y python3-pip
-COPY REQUIREMENTS.txt /app
-RUN pip3 install -r REQUIREMENTS.txt
+COPY requirements.txt /app
+RUN pip3 install -r requirements.txt
 COPY main.py /app
 COPY start-xvfb-nginx.sh /usr/local/bin
