--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -4,5 +4,5 @@ WORKDIR /app
 RUN apt-get install -y python3-pip
 COPY requirements.txt /app
 RUN pip3 install -r requirements.txt
-COPY main.py /app
+COPY worker.py /app
 COPY start-xvfb-nginx.sh /usr/local/bin
