--- a/proxy/requirements.txt
+++ b/proxy/requirements.txt
@@ -1,9 +1,6 @@
-async-timeout
-redis
+redis==4.5.4
 flask==2.1.3
-click
-aioflask
-arq
-flask-bootstrap
-flask-wtf
-httpx
+aioflask==0.4.0
+arq==0.25.0
+uvicorn==0.22.0
+httpx==0.24.0
